deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgquerynarrative
  namespace: pgquerynarrative
  labels:
    app.kubernetes.io/name: pgquerynarrative
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgquerynarrative
